--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <div class="card-body">
             <fieldset class="fieldset">
                 <label class="label text-neutral font-bold">Mobile Number</label>
-                <input maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 outline-0"
+                <input id="input-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 outline-0"
                     placeholder="Enter your number" />
                 <br>
 
                 <label class="label text-neutral font-bold">4 Digit Pin</label>
-                <input maxlength="4" minlength="4" type="text" class="input rounded-full bg-base-200 outline-0"
+                <input id="input-pin" maxlength="4" minlength="4" type="text" class="input rounded-full bg-base-200 outline-0"
                     placeholder="Enter 4 Digit Pin" />
 
-                <button class="btn btn-primary mt-4 rounded-full border-none">Login</button>
+                <button id="form-btn" class="btn btn-primary mt-4 rounded-full border-none">Login</button>
             </fieldset>
         </div>
     </div>
