--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <fieldset class="fieldset">
                 <label class="label text-neutral font-bold">Mobile Number</label>
                 <input id="input-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 outline-0"
-                    placeholder="Enter your number" />
+                    placeholder="Enter your number" value="01234567890" />
                 <br>
 
                 <label class="label text-neutral font-bold">4 Digit Pin</label>
