cashout section created

--- a/home.html
+++ b/home.html
@@ -83,6 +83,33 @@
         </div>
     </section>
 
+    <section id="cashout" class="w-11/12 mx-auto py-5">
+        <h2 class="text-2xl font-bold">Cashout</h2>
+        <div class="card bg-base-100 w-full shadow mt-8 rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+                    <label class="label text-neutral font-bold">Agent Number</label>
+                    <input id="cashout-number" maxlength="11" minlength="11" type="text"
+                        class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 11 digit number" />
+                    <br>
+
+                    <label class="label text-neutral font-bold">Amount</label>
+                    <input id="cashout-amount" type="number" class="input w-full rounded-full bg-base-200 outline-0"
+                        placeholder="Enter amount to withdraw" />
+                    <br>
+
+                    <label class="label text-neutral font-bold">Pin Number</label>
+                    <input id="cashout-pin" maxlength="4" minlength="4" type="password"
+                        class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 4 digit pin" />
+
+                    <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full border-none">Withdraw
+                        Money</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <script src="script/cashout.js"></script>
 </body>
 
 </html>
