--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
     </div>
 
     <!-- Form -->
-    <div class="card bg-base-100 w-full max-w-sm shadow mx-auto mt-8">
+    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow mx-auto mt-8 rounded-2xl">
         <div class="card-body">
             <fieldset class="fieldset">
                 <label class="label text-neutral font-bold">Mobile Number</label>
-                <input id="input-number" maxlength="11" minlength="11" type="text" class="input rounded-full bg-base-200 outline-0"
-                    placeholder="Enter your number" value="01234567890" />
+                <input id="input-number" maxlength="11" minlength="11" type="text"
+                    class="input rounded-full bg-base-200 outline-0" placeholder="Enter your number"
+                    value="01234567890" />
                 <br>
 
                 <label class="label text-neutral font-bold">4 Digit Pin</label>
-                <input id="input-pin" maxlength="4" minlength="4" type="text" class="input rounded-full bg-base-200 outline-0"
-                    placeholder="Enter 4 Digit Pin" />
+                <input id="input-pin" maxlength="4" minlength="4" type="text"
+                    class="input rounded-full bg-base-200 outline-0" placeholder="Enter 4 Digit Pin" />
 
                 <button id="form-btn" class="btn btn-primary mt-4 rounded-full border-none">Login</button>
             </fieldset>
         </div>
     </div>
-
 
     <script src="script/login.js"></script>
 </body>
