--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
 
 <body class="min-h-screen max-w-md bg-base-200 mx-auto">
 
-    <header class="border-b-2 border-gray-300">
-        <section class="w-11/12 mx-auto py-3 flex justify-between items-center">
+    <header class="border-b-2 border-gray-300 sticky top-0 bg-base-200 z-10">
+        <section class="w-11/12 mx-auto py-3 flex justify-between items-center ">
             <div class="left flex gap-1">
                 <div class="logo w-[60px]">
                     <img src="./assets/logo.png" alt="">
@@ -83,25 +83,31 @@
         </div>
     </section>
 
-    <section id="cashout" class="w-11/12 mx-auto py-5">
+    <section id="cashout" class="w-11/12 space-y-5 mx-auto py-5">
         <h2 class="text-2xl font-bold">Cashout</h2>
-        <div class="card bg-base-100 w-full shadow mt-8 rounded-2xl">
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
             <div class="card-body">
                 <fieldset class="fieldset">
+
+                    <!-- Agent Number Input -->
                     <label class="label text-neutral font-bold">Agent Number</label>
                     <input id="cashout-number" maxlength="11" minlength="11" type="text"
-                        class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 11 digit number" />
+                        class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 11 digit number"
+                        value="01234567890" />
                     <br>
 
+                    <!-- Amount Input -->
                     <label class="label text-neutral font-bold">Amount</label>
                     <input id="cashout-amount" type="number" class="input w-full rounded-full bg-base-200 outline-0"
                         placeholder="Enter amount to withdraw" />
                     <br>
 
+                    <!-- Pin Number Input -->
                     <label class="label text-neutral font-bold">Pin Number</label>
                     <input id="cashout-pin" maxlength="4" minlength="4" type="password"
                         class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 4 digit pin" />
 
+                    <!-- withdraw button -->
                     <button id="cashout-btn" class="btn btn-primary mt-4 rounded-full border-none">Withdraw
                         Money</button>
                 </fieldset>
