shortcut functionality done

--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
 
                     <!-- Agent Number Input -->
                     <label class="label text-neutral font-bold">Agent Number</label>
-                    <input id="cashout-number" maxlength="11" minlength="11" type="text"
+                    <input id="cashout-number" maxlength="11" minlength="11" type="number"
                         class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 11 digit number"
                         value="01234567890" />
                     <br>
@@ -115,6 +115,7 @@
         </div>
     </section>
 
+    <script src="script/machine.js"></script>
     <script src="script/cashout.js"></script>
 </body>
 
