--- a/home.html
+++ b/home.html
@@ -55,11 +55,11 @@
 
         <div class="buttons grid grid-cols-3 gap-3">
 
-            <button class="btn flex-col h-full py-5 btn-primary btn-soft">
+            <button onclick="showOnly('add-money')" class="btn flex-col h-full py-5 btn-primary btn-soft">
                 <img src="./assets/opt-1.png" alt="">
                 <p>Add Money</p>
             </button>
-            <button class="btn flex-col h-full py-5 btn-primary btn-soft">
+            <button onclick="showOnly('cashout')" class="btn flex-col h-full py-5 btn-primary btn-soft">
                 <img src="./assets/opt-2.png" alt="">
                 <p>Cashout</p>
             </button>
@@ -71,11 +71,11 @@
                 <img src="./assets/opt-4.png" alt="">
                 <p>Get Bonus</p>
             </button>
-            <button class="btn flex-col h-full py-5 btn-primary btn-soft">
+            <button onclick="showOnly('pay-bill')" class="btn flex-col h-full py-5 btn-primary btn-soft">
                 <img src="./assets/opt-5.png" alt="">
                 <p>Pay Bill</p>
             </button>
-            <button class="btn flex-col h-full py-5 btn-primary btn-soft">
+            <button onclick="showOnly('history')" class="btn flex-col h-full py-5 btn-primary btn-soft">
                 <img src="./assets/opt-6.png" alt="">
                 <p>Transactions</p>
             </button>
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-    <section id="add-money" class="w-11/12 space-y-5 mx-auto py-5">
+    <section id="add-money" class="w-11/12 space-y-5 mx-auto py-5 hidden">
         <h2 class="text-2xl font-bold">Add Money</h2>
         <div class="card bg-base-100 w-full shadow rounded-2xl">
             <div class="card-body">
@@ -110,7 +110,7 @@
                     <!-- Amount to Add -->
                     <label class="label text-neutral font-bold">Amount to Add</label>
                     <input id="add-money-amount" type="number" class="input w-full rounded-full bg-base-200 outline-0"
-                        placeholder="Add Amount to withdraw" />
+                        placeholder="Add Amount to Withdraw" />
 
                     <br>
 
@@ -119,7 +119,7 @@
                     <input id="add-money-pin" maxlength="4" minlength="4" type="password"
                         class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 4 digit pin" />
 
-                    <!-- withdraw button -->
+                    <!-- Money add button -->
                     <button id="add-money-btn" class="btn btn-primary mt-4 rounded-full border-none"> Add
                         Money</button>
                 </fieldset>
@@ -127,7 +127,7 @@
         </div>
     </section>
 
-    <section id="cashout" class="w-11/12 space-y-5 mx-auto py-5" hidden>
+    <section id="cashout" class="w-11/12 space-y-5 mx-auto py-5 hidden">
         <h2 class="text-2xl font-bold">Cashout</h2>
         <div class="card bg-base-100 w-full shadow rounded-2xl">
             <div class="card-body">
@@ -159,8 +159,60 @@
         </div>
     </section>
 
-    <script src="script/cashout.js"></script>
-    <script src="script/machine.js"></script>
+    <section id="pay-bill" class="w-11/12 space-y-5 mx-auto py-5 hidden">
+        <h2 class="text-2xl font-bold">Pay Bill</h2>
+        <div class="card bg-base-100 w-full shadow rounded-2xl">
+            <div class="card-body">
+                <fieldset class="fieldset">
+
+                    <label class="label text-neutral font-bold ">Select To Pay</label>
+                    <select id="pay-money-bill" class="select w-full rounded-full bg-base-200 outline-0">
+                        <option disabled selected>Select back</option>
+                        <option value="GAS">Gas-bill</option>
+                        <option value="ELECTRIC">Electric-bill</option>
+                        <option value="WIFI">Wifi-bill</option>
+                        <option value="DISH">Dish-bill</option>
+                    </select>
+
+                    <br>
+
+
+                    <!-- Biller Account Number -->
+                    <label class="label text-neutral font-bold">Biller Account Number</label>
+                    <input id="biller-number" maxlength="11" minlength="11" type="text"
+                        class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter account number"
+                        value="01234567890" />
+                    <br>
+
+                    <!-- Amount to Pay -->
+                    <label class="label text-neutral font-bold">Amount to Pay</label>
+                    <input id="pay-amount" type="number" class="input w-full rounded-full bg-base-200 outline-0"
+                        placeholder="Add amount to pay" />
+                    <br>
+
+                    <!-- Pin Number Input -->
+                    <label class="label text-neutral font-bold">Pin Number</label>
+                    <input id="pay-amount-pin" maxlength="4" minlength="4" type="password"
+                        class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 4 digit pin" />
+
+                    <!-- Pay Bill button -->
+                    <button id="pay-btn" class="btn btn-primary mt-4 rounded-full border-none">Pay Now</button>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <section id="history" class="w-11/12 space-y-5 mx-auto py-5 hidden">
+        <h2 class="text-2xl font-bold">Transaction History</h2>
+        <div class="space-y-5" id="history-container">
+
+        </div>
+    </section>
+
+    <script src="./script/machine.js"></script>
+    <script src="./script/addMoney.js"></script>
+    <script src="./script/pay-bill.js"></script>
+    <script src="./script/cashout.js"></script>
 </body>
 
 </html>
