--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <script src="./script/"></script>
+    <script src="./script/login.js"></script>
 </body>
 
 </html>
