--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 
-<body class="min-h-screen max-w-md bg-base-200 mx-auto">
+<body class="h-full lg:min-h-screen max-w-md mx-auto">
 
     <header class="border-b-2 border-gray-300 sticky top-0 bg-base-200 z-10">
         <section class="w-11/12 mx-auto py-3 flex justify-between items-center ">
@@ -49,11 +49,11 @@
     </header>
 
     <section class="w-11/12 mx-auto py-10 space-y-5">
-        <h2 class="text-3xl font-bold">Welcome to Pay<span class="text-primary">oo</span></h2>
-        <p class="text-neutral/50">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
+        <h2 class="text-center text-4xl lg:text-3xl font-bold">Welcome to Pay<span class="text-primary">oo</span></h2>
+        <p class="text-center lg:text-start text-neutral/50">Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
 
 
-        <div class="buttons grid grid-cols-3 gap-3">
+        <div class="buttons grid grid-cols-2 lg:grid-cols-3 gap-3">
 
             <button onclick="showOnly('add-money')" class="btn flex-col h-full py-5 btn-primary btn-soft">
                 <img src="./assets/opt-1.png" alt="">
