lg mistake cleared

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 
-<body class="mt-[100px] lg:mt-[100px] h-full lg:min-h-screen max-w-md mx-auto">
+<body class="mt-[100px] lg:mt-[100px] h-full min-h-screen max-w-md mx-auto">
     <!-- Logo -->
     <div class="logo w-[200px] mx-auto pt-8">
         <img src="./assets/Logo-full.png" alt="">
