--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 
-<body class="mt-[100px] lg:mt-[100px] h-full min-h-screen max-w-md mx-auto">
+<body class="min-h-screen max-w-md bg-base-200 mx-auto">
     <!-- Logo -->
     <div class="logo w-[200px] mx-auto pt-8">
         <img src="./assets/Logo-full.png" alt="">
@@ -40,13 +40,13 @@
             <fieldset class="fieldset">
                 <label class="label text-neutral font-bold">Mobile Number</label>
                 <input id="input-number" maxlength="11" minlength="11" type="text"
-                    class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter your number"
+                    class="input rounded-full bg-base-200 outline-0" placeholder="Enter your number"
                     value="01234567890" />
                 <br>
 
                 <label class="label text-neutral font-bold">4 Digit Pin</label>
                 <input id="input-pin" maxlength="4" minlength="4" type="text"
-                    class="input w-full rounded-full bg-base-200 outline-0" placeholder="Enter 4 Digit Pin" />
+                    class="input rounded-full bg-base-200 outline-0" placeholder="Enter 4 Digit Pin" />
 
                 <button id="form-btn" class="btn btn-primary mt-4 rounded-full border-none">Login</button>
             </fieldset>
